Fixing file names

--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -87,8 +87,99 @@ Let's plot this variable in a time series to see how activity fluctuates through
 plot(mean_steps$interval, mean_steps$mean, type = "l", xlab = "5-Minute Interval", ylab = "Mean Number of Steps Across All Days", main = "Mean Number of Steps at 5-Minute Intervals")
 ```
 
+Find the 5-minute interval that has the largest average number of steps:
+
+```{r echo=TRUE}
+mean_steps[mean_steps$mean == max(mean_steps$mean), ]
+```
+
 ## Imputing missing values
 
+First, find the number of rows with missing values:
 
+```{r echo=TRUE}
+length(activity[is.na(activity$steps), 2])
+length(activity[is.na(activity$date), 3])
+length(activity[is.na(activity$interval), 1])
+```
+
+As you can see, all missing values are in the `steps` column.
+
+For each row with a missing number of steps, let's fill in the average number of steps from that interval using the `mean_steps` variable.  First, create an `imputedactivity` variable as a copy of the `activity` data frame.
+
+```{r echo=TRUE}
+imputedactivity <- activity
+```
+
+Then, run a for loop to replace NA steps with the corresponding value from `mean_steps`:
+
+```{r echo=TRUE}
+i <- 0
+for(item in imputedactivity$steps) {
+  if(is.na(item)){
+    imputedactivity[i, "steps"] <- mean_steps[imputedactivity[i, "interval"] == mean_steps$interval, 2]
+  }
+  i <- 1 + i
+}
+```
+
+Let's see the histogram, mean, and median for this new data frame by repeating what we did above.
+
+```{r echo=TRUE}
+imputedactivity_by_date <- group_by(imputedactivity, date)
+imputed_total_steps <- summarize(imputedactivity_by_date, sum(steps, na.rm = TRUE))
+names(imputed_total_steps)[2] <- "sum"
+hist(imputed_total_steps$sum, xlab = "Imputed Total Steps on Each Day", main = "Histogram of Imputed Total Steps on Each Day")
+mean(imputed_total_steps$sum)
+median(imputed_total_steps$sum)
+```
+
+Note how the imputed values have a larger frequency around the middle of the histogram.  Both the mean and median increased as may be expected by adding more values to the data frame.  Additionally, the variance between the mean and median declined as we were adding more values that clustered naturally around the mean.
 
 ## Are there differences in activity patterns between weekdays and weekends?
+
+First, create a variable to hold the days of the week for the data frame:
+
+```{r echo=TRUE}
+dayofweek <- weekdays(imputedactivity$date)
+```
+
+Then, `cbind` it to the data frame and make it a character element:
+
+```{r echo=TRUE}
+imputedactivity <- cbind(imputedactivity, dayofweek)
+imputedactivity$dayofweek <- as.character(imputedactivity$dayofweek)
+```
+
+Now, use a function to convert the values to either "weekend" or "weekday" and store as a factor:
+
+```{r echo=TRUE}
+i <- 0
+for(item in imputedactivity$dayofweek) {
+  if(item == "Sunday" | item == "Saturday"){
+    imputedactivity[i, "dayofweek"] <- "weekend"
+  }
+  else{
+    imputedactivity[i, "dayofweek"] <- "weekday"
+  }
+  i <- 1 + i
+}
+
+imputedactivity$dayofweek <- as.factor(imputedactivity$dayofweek)
+```
+
+Finally, create a panel plot with a time series plot of 5-minute intervals and the average number of steps taken, averaged across all weekdays or weekend days.  Much of the code to make the plots is copied from above.
+
+```{r echo=TRUE}
+imputedactivity_by_interval <- group_by(imputedactivity, interval)
+
+day_mean_steps <- summarize(imputedactivity_by_interval[imputedactivity_by_interval$dayofweek == "weekday", ], mean(steps, na.rm = TRUE))
+names(day_mean_steps)[2] <- "mean"
+
+end_mean_steps <- summarize(imputedactivity_by_interval[imputedactivity_by_interval$dayofweek == "weekend", ], mean(steps, na.rm = TRUE))
+names(end_mean_steps)[2] <- "mean"
+
+par(mfrow = c(2,1))
+plot(day_mean_steps$interval, day_mean_steps$mean, type = "l", xlab = "5-Minute Interval", ylab = "Mean Number of Steps Across All Weekdays", main = "Mean Number of Steps at 5-Minute Intervals for Weekdays")
+plot(end_mean_steps$interval, end_mean_steps$mean, type = "l", xlab = "5-Minute Interval", ylab = "Mean Number of Steps Across All Weekend Days", main = "Mean Number of Steps at 5-Minute Intervals for Weekends")
+```
